--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "healthpass-auth-lib",
-  "version": "1.0.1",
+  "name": "dhp-auth-lib",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "engines": {
@@ -11,7 +11,8 @@
     "lint": "./node_modules/.bin/eslint . --fix --ext .js,.ts --max-warnings 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
     "ibmcloud-appid": "^6.1.1",
@@ -21,7 +22,7 @@
     "passport": "^0.4.1",
     "retry-axios": "^2.4.0",
     "uuid": "^8.3.2",
-    "healthpass-logging-lib": "git+ssh://git@github.com:WH-HealthPass/healthpass-logging-lib.git"
+    "dhp-logging-lib": "git+ssh://git@github.com:digitalhealthpass/dhp-logging-lib.git"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -41,6 +42,11 @@
     "husky": "^4.2.5",    
     "mocha": "^7.2.0",
     "prettier": "1.19.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
   
 }
